# OxygenPhysics

./: .gitignore  CMakeLists.txt  License  README.md
OxygenPhysics/include/: math.h  world.h
OxygenPhysics/include/Common/: Algorithm2D.h  ComputeAABB.h  ComputeInertia.h  GeometryTools.h  InertiaCalculate.h  OxyMathLite.h  OxygenMathLite.h  common.h
OxygenPhysics/include/Components/: AABBComponent.h  Components.h  ManifoldComponent.h  MassComponent.h  MaterialComponent.h  PhysicsMaterialComponent.h  ShapeComponent.h  TransformComponent.h  VelocityComponent.h
OxygenPhysics/include/Factories/: BodyFactory.h  Factories.h  RigidFactory.h  ShapeFactory.h
OxygenPhysics/include/Systems/: Collision.h  World.h
OxygenPhysics/src/Common/: ComputeAABB.cpp
OxygenPhysics/src/Systems/: Collison.cpp  World.cpp
tests/: PhysicsThread.h  RenderData.h  draw.h  main.cpp
tests/Rendering/: DebugDrawBase.h  RenderBackend.h  RenderData.h
tests/Rendering/Backend/: SFMLDebugDraw.h
tests/Rendering/Utils/: ColorGenerator.h  CoordinateConverter.h  ShapeGeometry.h
